# Echo

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  FIX_SUMMARY.md  Makefile  QWEN.md  README.md  pyproject.toml
.qwen/: settings.json  settings.json.orig
src/echo/: __init__.py  __main__.py  cli.py  config.py  types.py
src/echo/core/: __init__.py  agent.py  chatbot.py  recorder.py  transcriber.py  tts.py
src/echo/services/: __init__.py  history.py  session.py
src/echo/tools/: __init__.py  _toolkit.py  base.py  code.py  command.py  filesystem.py  research.py  system.py
src/echo/utils/: __init__.py  console.py  helpers.py  logging.py  validators.py
stubs/: edge_tts.pyi
tests/: __init__.py  conftest.py  factories.py  test_agent.py  test_chatbot.py  test_config.py  test_services.py  test_tools.py  test_utils.py  test_validators.py
tests/integration/: __init__.py  test_voice_pipeline.py
