[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echo-ai"
version = "1.0.0"
description = "Voice-enabled CLI chatbot with OpenRouter integration and AI agent tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Christoph", email = "christoph@example.com" }]
keywords = ["chatbot", "ai", "voice", "cli", "openrouter", "whisper", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "faster-whisper>=1.0.0",
    "ctranslate2>=4.0,<5",
    "onnxruntime>=1.14,<2",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "edge-tts>=7.2.0",
    "wikipedia-api>=0.6.0",
    "ddgs>=9.0.0",
    "python-cli-menu>=1.5.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "factory-boy>=3.3",
    "Faker>=25.0",
    # Linting
    "flake8>=7.0",
    "flake8-bugbear>=24.0",
    "flake8-comprehensions>=3.14",
    "flake8-docstrings>=1.7",
    "pep8-naming>=0.14",
    "flake8-import-order>=0.18",
    # Formatting
    "black>=24.0",
    "isort>=5.13",
    # Type checking
    "mypy>=1.10",
    # Security
    "bandit>=1.7",
    "safety>=3.0",
    # Pre-commit
    "pre-commit>=3.0",
    # HTTP
    "httpx>=0.27",
    # File watching
    "watchdog>=4.0",
]

[project.scripts]
echo = "echo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/echo"]

# ─── Black ───────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

# ─── isort ───────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "tests"]
known_first_party = ["echo"]
known_third_party = [
    "pydantic",
    "pydantic_settings",
    "dotenv",
    "requests",
    "numpy",
    "sounddevice",
    "soundfile",
    "edge_tts",
    "faster_whisper",
    "bs4",
    "ddgs",
    "wikipediaapi",
    "pythonclimenu",
]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip_gitignore = true

# ─── pytest ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "network: marks tests that require network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ─── Coverage ────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/echo"]
branch = true
omit = [
    "src/echo/__main__.py",
    "src/echo/cli.py",
    "src/echo/core/recorder.py",
    "src/echo/core/transcriber.py",
    "src/echo/core/tts.py",
    "src/echo/tools/research.py",
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "\\.\\.\\.",
]
fail_under = 50
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ─── mypy ────────────────────────────────────────────────────────────
[tool.mypy]
mypy_path = "stubs"
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
pretty = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "sounddevice.*",
    "soundfile.*",
    "numpy.*",
    "faster_whisper.*",
    "edge_tts.*",
    "pythonclimenu.*",
    "ddgs.*",
    "wikipediaapi.*",
    "ctranslate2.*",
    "onnxruntime.*",
]
ignore_missing_imports = true

# ─── bandit ──────────────────────────────────────────────────────────
[tool.bandit]
targets = ["src/echo"]
recursive = true
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B603", "B607"]  # assert_used, subprocess_without_shell, subprocess_using_shell
reports = true

# ─── flake8 ──────────────────────────────────────────────────────────
[tool.flake8]
max-line-length = 100
max-doc-length = 120
extend-ignore = [
    "E203",  # Whitespace before ':' (conflicts with black)
    "W503",  # Line break before binary operator
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D203",  # 1 blank line required before class docstring (conflicts with D211)
    "D213",  # Multi-line docstring summary should start at second line
    "I100",  # Import order (handled by isort)
    "I201",  # Import order
]
per-file-ignores = [
    "tests/*:D100,D101,D102,D103,D104,S101",
    "src/echo/__init__.py:F401",
    "src/echo/core/__init__.py:F401",
    "src/echo/tools/__init__.py:F401",
    "src/echo/utils/__init__.py:F401",
    "src/echo/services/__init__.py:F401",
]
