[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "echo-ai"
version = "1.0.0"
description = "Voice-enabled CLI chatbot with OpenRouter integration and AI agent tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Christoph", email = "christoph@example.com" }]
keywords = ["chatbot", "ai", "voice", "cli", "openrouter", "whisper", "tts"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "faster-whisper>=1.0.0",
    "ctranslate2>=4.0,<5",
    "onnxruntime>=1.14,<2",
    "numpy>=1.24.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "edge-tts>=7.2.0",
    "wikipedia-api>=0.6.0",
    "ddgs>=9.0.0",
    "python-cli-menu>=1.5.0",
    "beautifulsoup4>=4.12.0",
    "keyboard>=0.13.5",
    "pynput>=1.7.6",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.0",
    "factory-boy>=3.3",
    "Faker>=25.0",
    # Linting + Formatting (ruff replaces black, isort, flake8 + plugins)
    "ruff>=0.9.0",
    # Type checking
    "mypy>=1.10",
    # Security
    "bandit>=1.7",
    "pip-audit>=2.0",
    # Pre-commit
    "pre-commit>=3.0",
    # HTTP
    "httpx>=0.27",
    # File watching
    "watchdog>=4.0",
]

[project.scripts]
echo = "echo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/echo"]

# ─── Ruff (replaces black, isort, flake8 + plugins) ────────────────
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["stubs"]

[tool.ruff.lint]
select = [
    # pycodestyle errors
    "E",
    # pycodestyle warnings
    "W",
    # pyflakes
    "F",
    # isort
    "I",
    # pep8-naming
    "N",
    # pyupgrade
    "UP",
    # bugbear
    "B",
    # builtins
    "A",
    # comprehensions
    "C4",
    # simplify
    "SIM",
    # return
    "RET",
    # unused-arguments
    "ARG",
]
ignore = [
    "E501",      # line too long (handled by formatter)
    "D100",      # missing docstring in public module
    "D104",      # missing docstring in public package
    "D107",      # missing docstring in __init__
    "D203",      # conflicts with D211
    "D213",      # multi-line docstring summary
    "D401",      # imperative mood
    "SIM102",    # nested if statements (sometimes clearer)
    "SIM105",    # contextlib.suppress (try/except is more explicit)
    "RET505",    # unnecessary elif after return (sometimes clearer)
    "ARG002",    # unused method args (required by callback signatures)
    "ARG003",    # unused class method args (factory-boy pattern)
    "B007",      # unused loop var (acceptable in os.walk)
    "RET504",    # unnecessary assignment before return (clearer intent)
    "UP035",     # typing.Dict -> dict (breaks factory-boy compatibility)
]

[tool.ruff.lint.isort]
known-first-party = ["echo"]
known-third-party = [
    "pydantic",
    "pydantic_settings",
    "dotenv",
    "requests",
    "numpy",
    "sounddevice",
    "soundfile",
    "edge_tts",
    "faster_whisper",
    "bs4",
    "ddgs",
    "wikipediaapi",
    "pythonclimenu",
    "pynput",
    "keyboard",
    "factory",
    "faker",
]

[tool.ruff.lint.per-file-ignores]
"src/echo/__init__.py" = ["F401"]
"src/echo/core/__init__.py" = ["F401"]
"src/echo/tools/__init__.py" = ["F401"]
"src/echo/utils/__init__.py" = ["F401"]
"src/echo/services/__init__.py" = ["F401"]
"tests/*" = ["D", "S101", "F401", "F841", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = 80

# ─── Black (kept for compatibility, ruff format preferred) ─────────
[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

# ─── isort (kept for compatibility, ruff isort preferred) ──────────
[tool.isort]
profile = "black"
line_length = 100

# ─── pytest ──────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "network: marks tests that require network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ─── Coverage ────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["src/echo"]
branch = true
omit = [
    "src/echo/__main__.py",
    "src/echo/cli.py",
    "src/echo/core/recorder.py",
    "src/echo/core/transcriber.py",
    "src/echo/core/tts.py",
    "src/echo/tools/research.py",
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "\\.\\.\\.",
]
fail_under = 50
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ─── mypy ────────────────────────────────────────────────────────────
[tool.mypy]
mypy_path = "stubs"
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true
pretty = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "sounddevice.*",
    "soundfile.*",
    "numpy.*",
    "faster_whisper.*",
    "edge_tts.*",
    "pythonclimenu.*",
    "ddgs.*",
    "wikipediaapi.*",
    "ctranslate2.*",
    "onnxruntime.*",
]
ignore_missing_imports = true

# ─── bandit ──────────────────────────────────────────────────────────
[tool.bandit]
targets = ["src/echo"]
recursive = true
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B603", "B607"]  # assert_used, subprocess_without_shell, subprocess_using_shell
reports = true
